:tada: add menu
