# app/model/system/menu/menu.go
@@ -8,7 +8,7 @@ type QueryMenuReq struct {
 	ParentID int    `p:"parentId"`
 	Type     string `p:"type"`
 	Target   string `p:"target"`
-	Enabled  string `p:"enabled"`
+	Enabled  int    `p:"enabled"`
 
 	base.PagingQueryReq
 }
@@ -16,7 +16,6 @@ type QueryMenuReq struct {
 // CreateMenuReq 新增菜单资料请求参数
 type CreateMenuReq struct {
 	Name       string `p:"name"  v:"required#请输入菜单名称"`
-	Code       string `p:"code"  v:"required#请输入菜单编码"`
 	ParentID   int    `p:"parentId"`
 	Icon       string `p:"icon"`
 	Type       string `p:"type"`
@@ -24,13 +23,13 @@ type CreateMenuReq struct {
 	Sort       int    `p:"sort"`
 	Permission string `p:"permission"`
 	Enabled    int    `p:"enabled"`
+	RoleIDs    []int  `p:"roleIds"`
 }
 
 //UpdateMenuReq 修改菜单资料请求参数
 type UpdateMenuReq struct {
 	ID         int    `p:"id"  v:"required#请输入id"`
 	Name       string `p:"name"  v:"required#请输入菜单名称"`
-	Code       string `p:"code"  v:"required#请输入菜单编码"`
 	ParentID   int    `p:"parentId"`
 	Icon       string `p:"icon"`
 	Type       string `p:"type"`
@@ -38,4 +37,5 @@ type UpdateMenuReq struct {
 	Sort       int    `p:"sort"`
 	Permission string `p:"permission"`
 	Enabled    int    `p:"enabled"`
+	RoleIDs    []int  `p:"roleIds"`
 }
