# app/model/system/menu_role/menu_role.go
@@ -1,0 +1,7 @@
+package menu_role
+
+//CancelConnectReq 取消关联
+type CancelConnectReq struct {
+	MenuID  int   `p:"menuId"`
+	RoleIDs []int `p:"roleIds"`
+}
