# app/model/system/user_role/user_role.go
@@ -1,0 +1,7 @@
+package user_role
+
+//CancelConnectReq 取消关联
+type CancelConnectReq struct {
+	UserID  int   `p:"userId"`
+	RoleIDs []int `p:"roleIds"`
+}
